# FOXHOUND

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  demo.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks/: easy_task.json  hard_tasks.json  medium_task.json
tests/: conftest.py  smoke_test.py  test_phase3_integration.py
