[project]
name = "foxhound"
version = "1.0.0"
description = "FOXHOUND - Forensic audit environment with adversarial CFO dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "anand-r-m", email = "anand-r-m@users.noreply.github.com"}
]
keywords = ["reinforcement-learning", "openenv", "environment", "audit", "adversarial"]

dependencies = [
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "certifi>=2026.2.25",
    "click>=8.3.2",
    "distro>=1.9.0",
    "fastapi>=0.135.3",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jiter>=0.13.0",
    "openai>=2.30.0",
    "packaging>=26.0",
    "pluggy>=1.6.0",
    "pydantic>=2.12.5",
    "pydantic_core>=2.41.5",
    "Pygments>=2.20.0",
    "pytest>=9.0.2",
    "sniffio>=1.3.1",
    "starlette>=1.0.0",
    "tqdm>=4.67.3",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.pyright]
include = ["*.py", "server", "tests"]
exclude = ["**/__pycache__", ".venv", "venv"]
typeCheckingMode = "basic"
